<resources>
    <string name="app_name">My To-Do</string>
    <string name="title_hint">Title</string>
    <string name="repeat_text">Repeat</string>
    <string name="reminder_text">Add reminder</string>
    <string name="comment_text">Comment</string>
    <string name="all_day_text">All day</string>
    <string name="action_save">Save</string>
    <string name="default_time">00:00</string>

    <!--Repeat Spinner option labels -->
    <string name="no_repeat">Do not repeat</string>
    <string name="repeat_daily">Daily</string>
    <string name="repeat_weekly">Weekly</string>
    <string name="repeat_monthly">Monthly</string>
    <string name="repeat_yearly">Yearly</string>

    <!--Reminder spinner option labels -->
    <string name="reminder_off">No reminder</string>
    <string name="reminder_on_time">On time</string>
    <string name="reminder_10_min">10 minutes before</string>
    <string name="reminder_30_min">30 minutes before</string>
    <string name="reminder_1_hour">1 hour before</string>
    <string name="reminder_1_day">1 day before</string>
    <string name="delete_all_entries_label">Delete All Tasks</string>
    <string name="editor_insert_task_successful">Task saved</string>
    <string name="editor_insert_task_failed">Error saving task</string>
    <string name="empty_list_title">You have no to-dos yet…</string>
    <string name="add_a_to_do">Start by adding one</string>
    <string name="edit_task_activity_title">Edit Task</string>
    <string name="add_new_task_activity_title">Add New Task</string>
    <string name="update_task_error">Error updating task</string>
    <string name="update_task_successful">Task updated</string>
    <string name="unsaved_changes_dialog_msg">Discard changes or continue editing?</string>
    <string name="discard">Discard</string>
    <string name="continue_editing">Continue Editing</string>
    <string name="delete_dialog_msg">Delete this task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="list_item_icon">Icon</string>
    <string name="empty_tasks_image">Empty Tasks Image</string>
    <string name="editor_delete_task_failed">Error deleting task</string>
    <string name="editor_delete_task_successful">Task deleted</string>
    <string name="all_tasks_deleted">All tasks have been deleted</string>
    <string name="delete_all_dialog_msg">Delete all tasks?</string>
    <string name="start_date_label">Start Date</string>
    <string name="start_time_label">Start Time</string>
    <string name="calendar_icon">calendar_icon</string>
    <string name="notification_icon">notification_icon</string>
    <string name="repeat_icon">repeat_icon</string>
    <string name="comment_icon">comment_icon</string>
    <string name="action_settings">Settings</string>

    <!-- Strings for SharedPreferences -->
    <string name="pref_night_mode_key">night_mode</string>
    <string name="pref_night_mode_summary_off">Night mode off</string>
    <string name="pref_night_mode_summary_on">Night mode on</string>
    <string name="pref_night_mode_label">Night Mode</string>


</resources>
