<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_todo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/to_do_small"
            android:contentDescription="@string/empty_tasks_image" />

        <TextView
            android:id="@+id/empty_to_do_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/empty_todo_image"
            android:layout_centerHorizontal="true"
            android:paddingTop="16dp"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/empty_list_title"/>

        <TextView
            android:id="@+id/get_started_text"
            android:layout_width="wrap_content"
            android:paddingTop="8dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/empty_to_do_title"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/add_a_to_do"/>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="@dimen/FAB_size"
        android:layout_height="@dimen/FAB_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_add_white_24"
        android:layout_alignParentEnd="true" />


</RelativeLayout>